Chocola fixed again

--- a/Theme_Group_1/Chocola.theme.css
+++ b/Theme_Group_1/Chocola.theme.css
@@ -938,14 +938,7 @@ text-shadow: 0 0 6px black, 0 0 6px black;
     right: -4px!important;
     width: 32px!important;
 }
-.container-2Thooq .status-2kJpnA {
-   border: none;
-   left: 40px;
-   width: 23px;
-   height: 23px;
-   bottom: -3px;
-   border-radius: 50%;
-}
+
 .status-3fQvEa {
     height: 20px;
     width: 20px;
@@ -1273,7 +1266,7 @@ text-shadow: 0 0 6px black, 0 0 6px black;
 .emojiPicker-3m1S-j .categories-1feg4n .item-16cXuq.selected-39BZ4S {
     border-bottom-color: #593B3A; /* Main Color */
 }
-.bda-dark #bda-qem
+.bda-dark #bda-qem {
     border-bottom: none !important;
     background: transparent;
 }
