--- a/Theme_Group_1/Bubble.theme.css
+++ b/Theme_Group_1/Bubble.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Bubble_Time","description":"Nice and Cool Bubble Theme","author":"DevilsTheAvenged","version":"1"}*//{}
+//META{"name":"Bubble_Time","description":"Nice and Cool Bubble Theme","author":"DevilsLynAvenged","version":"1"}*//{}
 #app-mount {
 	background-image: url("https://images.alphacoders.com/151/151713.jpg");
     background-size: cover !important;
@@ -1213,7 +1213,7 @@ a {
   opacity: 1;
 }
 .theme-dark .checkbox-1ix_J3[style*="border-color: rgb(114, 137, 218);"],
-.checkbox .checkbox-inner input[type=checkbox]:checked+span {
+.checkbox-3kaeSU .checkboxInner-3yjcPe .checkboxElement-1qV33p:checked+span {
     border-color: rgba(0, 0, 0, 0) !important;
     border-radius: 50px;
     background-color: rgba(0,0,0,0.3);
