--- a/Theme_Group_1/NoGameNoLife.theme.css
+++ b/Theme_Group_1/NoGameNoLife.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"NoGameNoLife_Theme","description":"I hope you enjoy the theme","author":"DevilsTheAvenged","version":"1.4"}*//{}
+//META{"name":"NoGameNoLife_Theme","description":"I hope you enjoy the theme","author":"DevilsLynAvenged","version":"1.4"}*//{}
 #app-mount {
 	background: url("https://wallpapercave.com/wp/wp1825485.jpg") 0/cover !important;
 }
@@ -777,7 +777,7 @@
     stroke-width: 2;
 }
 .theme-dark .checked-3_4uQ9[style*="background-color: rgb(114, 137, 218); border-color: rgb(114, 137, 218);"],
-.checkbox .checkbox-inner input[type=checkbox]:checked+span,
+.checkbox-3kaeSU .checkboxInner-3yjcPe .checkboxElement-1qV33p:checked+span,
 .theme-dark .checked-3_4uQ9 {
      background-color: #840058 !important;
      border-color: transparent !important;
