--- a/Theme_Group_2/Danganronpa.theme.css
+++ b/Theme_Group_2/Danganronpa.theme.css
@@ -22,7 +22,7 @@
 .theme-dark .content-yTz4x3,
 .theme-dark .chat-3bRxxu,
 .chat .messages,
-.theme-dark .container-3gCOGcc, .theme-dark .messagesWrapper-3lZDfY,
+.theme-dark .friends-table, .theme-dark .messagesWrapper-3lZDfY,
 .theme-dark .members-1998pB,
 .theme-dark .container-3gCOGc,
 .theme-dark .headerBar-UHpsPw,
@@ -66,12 +66,12 @@
     height: 17px;
     border-radius: 0%;
 }
- .theme-dark .container-3gCOGcc .scroller-wrap ::-webkit-scrollbar-track-piece, 
+ .theme-dark .friends-table .scroller-wrap ::-webkit-scrollbar-track-piece, 
  .theme-dark .scrollerThemed-2oenus.themedWithTrack-q8E3vB .scroller-2FKFPG::-webkit-scrollbar-track-piece {
     background-color: transparent;
     border-color: transparent;
 }
-.theme-dark .container-3gCOGcc .scroller-wrap ::-webkit-scrollbar-thumb, 
+.theme-dark .friends-table .scroller-wrap ::-webkit-scrollbar-thumb, 
 .theme-dark .scrollerThemed-2oenus.themedWithTrack-q8E3vB .scroller-2FKFPG::-webkit-scrollbar-thumb {
     background-color: rgba(0,0,0,0.5);
     border-color: black;
@@ -252,7 +252,7 @@
 .spinner-wandering-cubes .spinner-item {
     background-color: #5088A3;
 }
-.tooltip-1OS-Ti.black-2bmmnj,
+.tooltip-1OS-Ti.black-2bmmnj.tooltip-1OS-Ti,
 .newMessagesBar-mujexs,
 .theme-dark .jumpToPresentBar-9P20AM {
     background-color: #5088A3;
@@ -549,11 +549,11 @@
 .theme-dark .messageGroupWrapper-o-Zw7G:hover {
     border: 1px solid #8EC2C2;
 }
-.theme-dark .searchResult-3pzFAB.expanded-v2Szsz .searchResultMessage-2VxO12.hit-NLlWXA {
+.theme-dark .searchResultsWrap-2DKFzt .expanded-v2Szsz .searchResultMessage-2VxO12.hit-NLlWXA {
     background-color: #8EC2C2;
 }
 .theme-dark .messageGroupWrapper-o-Zw7G,
-.theme-dark .searchResult-3pzFAB .searchResultMessage-2VxO12.hit-NLlWXA {
+.theme-dark .searchResultsWrap-2DKFzt .searchResult-3pzFAB .searchResultMessage-2VxO12.hit-NLlWXA {
     background-color: black;
     border-color: transparent;
 }
@@ -670,7 +670,7 @@
     background-color: #8EC2C2;
     color: #fff;
 }
-.theme-dark .searchResult-3pzFAB.expanded-v2Szsz {
+.theme-dark .searchResultsWrap-2DKFzt .searchResult-3pzFAB.expanded-v2Szsz  {
     border: none;
     background-color: #537272;
 }
@@ -775,7 +775,7 @@
     border-color: #8EC2C2 !important;
     background-color: #8EC2C2 !important;
 }
-.emojiPicker-3m1S-j .header-1nkwgG .searchBar-2pWH0_ {
+.bda-dark .emoji-picker .header .searchBar-2_Yu-C, .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .searchBar-2_Yu-C {
     background-color: transparent;
 }
 .searchBar-2_Yu-C.searchBarLight-1NxoDG .searchBarInner-1_Tg2R {
@@ -834,7 +834,7 @@
 .theme-dark .itemGroup-1tL0uz {
     border-color: transparent;
 }
-.checkbox .checkbox-inner input[type=checkbox]:checked+span {
+.checkbox-3kaeSU .checkboxInner-3yjcPe .checkboxElement-1qV33p:checked+span {
     background-color: #8EC2C2;
     border-color: transparent;
 }
@@ -893,7 +893,7 @@
 .theme-dark .keybindShortcutTipsSelect-HDyfe8:last-of-type:before {
     background-color: transparent;
 }
-.theme-dark .friendsTable-133bsv .friendTableAddWrapper-nHHZtK .friendTableSuggestionsHeader-2zSnpD,
+.theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d,
 .theme-dark .friendsTable-133bsv .friendsRow-2yicud+.friendsRow-2yicud {
     border-bottom: none;
 }
@@ -907,7 +907,7 @@
 .theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnActions-1LT3_M .friendsAction-__WNE9:hover {
     border: 1px solid rgba(255,255,255,0.63);
 }
-.theme-dark .topPill-30KHOu .item-PXvHYJ .badge {
+.theme-dark .container-3gCOGc .tab-bar .tab-bar-item .badge {
     background-color: #5088A3;
     color: white;
 }
@@ -919,7 +919,7 @@
     background-color: #5088A3;
     color: #fff;
 }
-.theme-dark .topPill-30KHOu .item-PXvHYJ:hover:not(.selected) {
+.theme-dark .topPill-30KHOu .item-PXvHYJ:hover:not(.itemSelected-1qLhcL) {
     background-color: rgba(255,255,255,0.34);
 }
 .theme-dark .friendsTable-133bsv .friendsRow-2yicud:hover {
@@ -929,17 +929,17 @@
     background-color: #5088A3;
     color: white;
 }
-.theme-dark .tabBar-1E2ExX .primary-3j8BhM {
-    background-color: #5088A3 !important;
-    color: #fff;
+.tabBar-1E2ExX .primary-3j8BhM {
+    background-color: #5088A3  !important;
+    color: #fff  !important;
      text-shadow: 0 0 4px black;
 }
-.theme-dark .tabBar-1E2ExX .primary-3j8BhM:hover:not(.selected) {
-    background-color: #8EC2C2 !important;
+.tabBar-1E2ExX .primary-3j8BhM:hover:not(.selected) {
+    background-color: #8EC2C2  !important;
 }
 .tabBar-1E2ExX .primarySelected-3uHKZn {
-    background-color: #847C71 !important;
-    color: white !important;
+    background-color: #847C71  !important;
+    color: white  !important;
 }
 #friends .btn,
 .private-channel-recipients-invite .error-state.not-friends .btn {
@@ -974,6 +974,7 @@
     border-color: black;
     background-color: #5088A3;
 }
+.searchBar-2pE3BB .searchBar-2_Yu-C,
 .searchBar-2_Yu-C {
     background-color: black;
 }
@@ -1005,7 +1006,7 @@
 .theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumn-eVHFqJ,
 .theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnStatus-ZH4ho2,
 .friendsTable-133bsv .friendsRow-2yicud .discord-tag .username,
-.friendsTable-133bsv .friendsRow-2yicud .discord-tag .discriminator,
+#friends .friends-table .friends-row .discord-tag .discriminator,
 .theme-dark .subtitle-2iWJ5y
  {
     color: white;
@@ -1021,11 +1022,11 @@
 .theme-dark .friendsTable-133bsv .friendsRow-2yicud+.friendsRow-2yicud {
     border-top: none;
 }
-.theme-dark .topPill-30KHOu .item-PXvHYJ:hover:not(.selected) .badge {
+.theme-dark .topPill-30KHOu .item-PXvHYJ:hover:not(.itemSelected-1qLhcL) .badge {
     color: white;
 }
-.privateChannels-1nO12o header,
-.name-2WpE7M, .nameWithActivity-1ceSyU,
+.private-channels header,
+.private-channels .channel .channel-name,
 .private-channels .channel .channel-activity-text {
     color: #fff;
     opacity: .7;
