--- a/Theme_Group_2/Thunderstorm.theme.css
+++ b/Theme_Group_2/Thunderstorm.theme.css
@@ -831,7 +831,7 @@
 .theme-dark .itemGroup-1tL0uz {
     border-color: transparent;
 }
-.checkbox .checkbox-inner input[type=checkbox]:checked+span {
+.checkbox-3kaeSU .checkboxInner-3yjcPe .checkboxElement-1qV33p:checked+span {
     background-color: #0A0C0C;
     border-color: transparent;
 }
@@ -933,7 +933,7 @@
 }
 .tabBar-1E2ExX .primarySelected-3uHKZn {
     background-color: #455A64  !important;
-    color: white;
+    color: white  !important;
 }
 #friends .btn,
 .private-channel-recipients-invite .error-state.not-friends .btn {
