--- a/Theme_Group_3/Fanta.theme.css
+++ b/Theme_Group_3/Fanta.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Fanta","description":"Enjoy a nice drink of Fanta","author":"DevilsTheAvenged","version":"1"}*//{}
+//META{"name":"Fanta","description":"Enjoy a nice drink of Fanta","author":"DevilsLynAvenged","version":"1"}*//{}
 #app-mount {
     background-image: url(http://www.top4themes.com/data/out/47/5730601-fanta-wallpapers.jpeg);
     background-size: cover;
@@ -1150,7 +1150,7 @@ a,
     box-shadow: none;
 }
 .theme-dark .checkbox-1ix_J3[style*="border-color: rgb(114, 137, 218);"],
-.checkbox .checkbox-inner input[type=checkbox]:checked+span {
+.checkbox-3kaeSU .checkboxInner-3yjcPe .checkboxElement-1qV33p:checked+span {
     border-color: rgba(0, 0, 0, 0) !important;
     border-radius: 0;
     background-color: rgba(0,0,0,0.3);
@@ -1352,7 +1352,7 @@ a,
 }
 .tabBar-1E2ExX .primary-3j8BhM {
     background-color: #F99500  !important;
-    color: #fff;
+    color: #fff  !important;
 }
 .tabBar-1E2ExX .primary-3j8BhM:hover:not(.selected) {
     background-color: #ffa018  !important;
