--- a/Theme_Group_3/Kitty_Cat_Love.theme.css
+++ b/Theme_Group_3/Kitty_Cat_Love.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Kitty_Cat_Love","description":"It's a CATastrophe","author":"DevilsTheAvenged","version":"1"}*//{}
+//META{"name":"Kitty_Cat_Love","description":"It's a CATastrophe","author":"DevilsLynAvenged","version":"1"}*//{}
 
 #app-mount {
     background-image: url(https://www.wallpaperup.com/uploads/wallpapers/2013/09/18/148667/5c3b967f3bc647d4e63dcc0dd903efdd.jpg);
@@ -1150,7 +1150,7 @@ a,
     box-shadow: none;
 }
 .theme-dark .checkbox-1ix_J3[style*="border-color: rgb(114, 137, 218);"],
-.checkbox .checkbox-inner input[type=checkbox]:checked+span {
+.checkbox-3kaeSU .checkboxInner-3yjcPe .checkboxElement-1qV33p:checked+span {
     border-color: rgba(0, 0, 0, 0) !important;
     border-radius: 0;
     background-color: rgba(0,0,0,0.3);
