--- a/Theme_Group_3/KemonoFriends.theme.css
+++ b/Theme_Group_3/KemonoFriends.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Kemono_Friends","description":"Enjoy the Wildlife Full of Animals","author":"DevilsTheAvenged","version":"1"}*//{}
+//META{"name":"Kemono_Friends","description":"Enjoy the Wildlife Full of Animals","author":"DevilsLynAvenged","version":"1"}*//{}
 #app-mount {
     background-image: url(https://www.wallpaperup.com/uploads/wallpapers/2017/10/15/1109504/4b10f71dbbde2f4434bfd71d045ec716.jpg);
     background-size: cover;
@@ -1149,7 +1149,7 @@ a,
     box-shadow: none;
 }
 .theme-dark .checkbox-1ix_J3[style*="border-color: rgb(114, 137, 218);"],
-.checkbox .checkbox-inner input[type=checkbox]:checked+span {
+.checkbox-3kaeSU .checkboxInner-3yjcPe .checkboxElement-1qV33p:checked+span {
     border-color: rgba(0, 0, 0, 0) !important;
     border-radius: 0;
     background-color: rgba(0,0,0,0.3);
@@ -1351,14 +1351,14 @@ a,
 }
 .tabBar-1E2ExX .primary-3j8BhM {
     background-color: #174C3E  !important;
-    color: #fff  !important;
+    color: #fff;
 }
 .tabBar-1E2ExX .primary-3j8BhM:hover:not(.selected) {
     background-color: #248367  !important;
 }
 .tabBar-1E2ExX .primarySelected-3uHKZn {
     background-color: #248367  !important;
-    color: white  !important;
+    color: white;
     border: 2px outset rgba(0,0,0,0.5);
 }
 .theme-dark .topPill-30KHOu .item-PXvHYJ:hover:not(.itemSelected-1qLhcL) {
