--- a/Theme_Group_4/Ram.theme.css
+++ b/Theme_Group_4/Ram.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Ram","description":"Go For Team Ram","author":"DevilsTheAvenged","version":"1"}*//{}
+//META{"name":"Ram","description":"Go For Team Ram","author":"DevilsLynAvenged","version":"1"}*//{}
 
 .theme-dark .title-3qD0b-,
 .theme-dark .headerBar-UHpsPw {
@@ -650,7 +650,7 @@
 }
 
 
-.checkbox .checkbox-inner input[type=checkbox]:checked+span {
+.checkbox-3kaeSU .checkboxInner-3yjcPe .checkboxElement-1qV33p:checked+span {
     background-color: #f896c1;
     border-color: transparent
 }
