--- a/Theme_Group_4/Rem.theme.css
+++ b/Theme_Group_4/Rem.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Rem","description":"Go For Team Rem","author":"DevilsTheAvenged","version":"1"}*//{}
+//META{"name":"Rem","description":"Go For Team Rem","author":"DevilsLynAvenged","version":"1"}*//{}
 
 .theme-dark .title-3qD0b-,
 .theme-dark .headerBar-UHpsPw {
@@ -651,7 +651,7 @@
 }
 
 
-.checkbox .checkbox-inner input[type=checkbox]:checked+span {
+.checkbox-3kaeSU .checkboxInner-3yjcPe .checkboxElement-1qV33p:checked+span {
     background-color: #68b0f1;
     border-color: transparent
 }
