--- a/Theme_Group_4/Winter.theme.css
+++ b/Theme_Group_4/Winter.theme.css
@@ -874,7 +874,7 @@
     padding: 7px;
 }
 
-.checkbox .checkbox-inner input[type=checkbox]:checked+span {
+.checkbox-3kaeSU .checkboxInner-3yjcPe .checkboxElement-1qV33p:checked+span {
     background-color: rgba(255,255,255,0.17);
     border-color: transparent;
 }
@@ -1707,7 +1707,7 @@
 
 .tabBar-1E2ExX .primarySelected-3uHKZn {
     background-color: #3F93D3  !important;
-    color: white;
+    color: white  !important;
 }
 
 
