--- a/Theme_Group_4/WonderfulLeaves.theme.css
+++ b/Theme_Group_4/WonderfulLeaves.theme.css
@@ -545,7 +545,7 @@
     border-color: transparent;
 }
 
-.checkbox .checkbox-inner input[type=checkbox]:checked+span {
+.checkbox-3kaeSU .checkboxInner-3yjcPe .checkboxElement-1qV33p:checked+span {
     background-color: rgba(0,0,0,0.8);
     border-color: transparent;
 }
